[project]
name = "flask-sample-app"
version = "0.1.0"
description = "Sample Flask application for testing pyproject.toml buildpack"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flask>=3.0.0",
    "gunicorn>=21.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

